--- a/Talk7/Seminar-Arbeit.tex
+++ b/Talk7/Seminar-Arbeit.tex
@@ -5,7 +5,7 @@ in the Context of Cybersecurity}{}
 \chaptauthors{Lenz, Roland, Pascal, Silas}
 
 % TODO
-\Kurzfassung{%
+\Kurzfassung{
 This is the abstract.
 It fits pretty much on one page and is definitely not longer.}
 
